[DELIVERS BUGFIX #28] Fixes vertical alignment of coursemap creator names in IE9-10

--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -2095,6 +2095,7 @@ a.table--heading {
     display: table-cell;
     vertical-align: middle;
     width: $matrixCellWidth;
+    height: 6.8rem;
     font-weight: $bold;
     color: $tealMedium;
     padding: 0 1.6rem;
