--- a/app/assets/stylesheets/partials/_mixins-base.scss
+++ b/app/assets/stylesheets/partials/_mixins-base.scss
@@ -123,6 +123,16 @@
 	box-sizing: $value;
 }
 
+// Translate
+// --------------------------
+@mixin translate($x, $y) {
+	-webkit-transform: translate($x, $y);
+	-moz-transform: translate($x, $y);
+	-ms-transform: translate($x, $y);
+	-o-transform: translate($x, $y);
+	transform: translate($x, $y);
+}
+
 // Rotate
 // --------------------------
 @mixin rotate($degrees, $origin: 0 0) {
